deploy: arb goerli mumbai(wip)

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,21 +7,22 @@
   "scripts": {
     "build": "vite build",
     "dev": "wait-port localhost:8545 && vite",
+    "dev:mumbai": "wait-port https://polygon-mumbai.g.alchemy.com/v2/iUC0GH6CW_qfRxEzlipX-obRqJZRcnfg && vite",
     "initialize": "pnpm build",
     "preview": "vite preview",
     "test": "tsc --noEmit"
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/common": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/dev-tools": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/network": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/react": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/recs": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/schema-type": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/std-client": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/utils": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/world": "2.0.0-alpha.1.204+d97282b6",
+    "@latticexyz/common": "2.0.0-alpha.1.212",
+    "@latticexyz/dev-tools": "2.0.0-alpha.1.212",
+    "@latticexyz/network": "2.0.0-alpha.1.212",
+    "@latticexyz/react": "2.0.0-alpha.1.212",
+    "@latticexyz/recs": "2.0.0-alpha.1.212",
+    "@latticexyz/schema-type": "2.0.0-alpha.1.212",
+    "@latticexyz/std-client": "2.0.0-alpha.1.212",
+    "@latticexyz/utils": "2.0.0-alpha.1.212",
+    "@latticexyz/world": "2.0.0-alpha.1.212",
     "@wagmi/chains": "^0.2.22",
     "contracts": "workspace:*",
     "ethers": "^5.7.2",
