--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -20,3 +20,10 @@ eth_rpc_url = "https://follower.testnet-chain.linfra.xyz"
 
 [profile.hackathon-testnet]
 eth_rpc_url = "https://lattice-goerli-sequencer.optimism.io"
+
+
+[profile.arbitrum-goerli]
+eth_rpc_url = "https://arb-goerli.g.alchemy.com/v2/-7HCQM8BjOXGvYBiDlkVJRbi7oZV2NgH"
+
+[profile.mumbai]
+eth_rpc_url = "https://polygon-mumbai.g.alchemy.com/v2/iUC0GH6CW_qfRxEzlipX-obRqJZRcnfg"
