--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -7,6 +7,8 @@
     "build": "forge clean && forge build",
     "deploy": "pnpm run initialize && mud deploy",
     "deploy:hackathon": "pnpm run initialize && mud deploy --profile=hackathon-testnet",
+    "deploy:arbitrum-goerli": "pnpm run initialize && mud deploy --profile=arbitrum-goerli",
+    "deploy:mumbai": "pnpm run initialize && mud deploy --profile=mumbai",
     "deploy:testnet": "pnpm run initialize && mud deploy --profile=lattice-testnet",
     "dev": "pnpm mud dev-contracts --tsgenOutput ../client/src/mud",
     "initialize": "pnpm run tablegen && pnpm run worldgen && pnpm run build && pnpm run worldtypes && pnpm run tsgen",
@@ -23,11 +25,11 @@
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/cli": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/schema-type": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/std-contracts": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/store": "2.0.0-alpha.1.204+d97282b6",
-    "@latticexyz/world": "2.0.0-alpha.1.204+d97282b6",
+    "@latticexyz/cli": "2.0.0-alpha.1.212",
+    "@latticexyz/schema-type": "2.0.0-alpha.1.212",
+    "@latticexyz/std-contracts": "2.0.0-alpha.1.212",
+    "@latticexyz/store": "2.0.0-alpha.1.212",
+    "@latticexyz/world": "2.0.0-alpha.1.212",
     "ethers": "^5.7.2"
   },
   "devDependencies": {
